# inferno-example

./: README.md  dune-project  foo.midml
lib/: Datatype.ml  Datatype.mli  DeBruijn.ml  DeBruijn.mli  F.ml  F.mli  FPrinter.ml  FPrinter.mli  FTypeChecker.ml  FTypeChecker.mli  Infer.ml  Infer.mli  ML.ml  ML2F.ml  MLLexer.mll  MLParser.mly  MLPrinter.ml  MLPrinter.mli  P.ml  Printer.ml  Structure.ml  Utils.ml  Utils.mli  dune
test/: BenchMLRandom.ml  CheckF.ml  CheckML.ml  Colors.ml  Measure.ml  Measure.mli  RandomML.ml  RandomML.mli  TestF.ml  TestML.ml  TestMLRandom.ml  dune
test/suite.t/: cons.midml  conscons.midml  error-cycle.midml  error-parsing.midml  error-unbound.midml  error-unify-app-arg.midml  error-unify-app-fun.midml  error-unify-letprod.midml  error-variable-scope-escape.midml  hole.midml  id-annot-flexible.midml  id-annot-flexible2.midml  id-rigid-wrong.midml  id-rigid.midml  id-rigid2.midml  id.midml  idid.midml  letrec-add.midml  letrec-list-length.midml  letrec-loop.midml  list.midml  match-some-annotated.midml  match-tuple.midml  nat-annot.midml  nat.midml  nil.midml  none.midml  option.midml  rigid-level-escape-later-wrong.midml  rigid-level-escape-wrong.midml  rigid-redundant.midml  rigid-unreachable.midml  run.t  some-nil.midml  some-pair.midml  some.midml  unit-rigid-wrong.midml  wrong-id.midml  wrong-id2.midml
